# SuperGPT

./: LICENSE  README.md  pyproject.toml
supergpt/supercrawler/: scrapy.cfg
supergpt/supercrawler/supercrawler/: items.py  middlewares.py  pipelines.py  settings.py
supergpt/supercrawler/supercrawler/spiders/: __init__.py  characters_spider.py  definitions_spider.py  episode_spider.py  quotes_spider.py  synopsis_spider.py  transcript_spider.py
