[tool.poetry]
name = "supergpt"
version = "0.1.0"
description = ""
authors = ["mahdi.dlt13830510 <mahdi.dlt13830510@Gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.2"
ujson = "^5.10.0"
numpy = "^2.0.0"
celery = "^5.4.0"
pandas = "^2.2.2"
polars = "^1.1.0"
rich = "^13.7.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
